# mothers_emblems

./: README.md  devbox.json  pyproject.toml
src/mothers_emblems_worldofgeese/: __main__.py
